@@ -125,6 +125,7 @@ struct ct_sync_state {
 
 	struct mcast_sock *mcast_server;  /* multicast socket: incoming */
 	struct mcast_sock *mcast_client;  /* multicast socket: outgoing  */
+	struct evfd *evfd;		  /* event fd */
 
 	struct sync_mode *sync;		/* sync mode */
 
