@@ -34,6 +34,7 @@ o use generic nfct_cmp() to compare objects
 o improve network message sanity checkings
 o add Mcast[Snd|Rcv]SocketBuffer clauses to tune multicast socket buffers
 o add missing string.h required by strdup in config parsing
+o add eventfd emulation to communicate receiver -> sender
 
 version 0.9.6 (2008/03/08)
 ------------------------------
